update job and horoscopes

--- a/index.html
+++ b/index.html
@@ -21,20 +21,6 @@ class: middle, center
 ---
 class: middle, center
 
-![horse js](public/img/horse_js.png)
-
----
-class: middle, center
-
-![horse horse](public/img/horsehorse.png)
----
-class: middle, center
-
-# hi my name is @ag_dubs
-
----
-class: middle, center
-
 ![dorito](public/img/dorito.png)
 
 ---
@@ -45,7 +31,7 @@ class: middle, center
 ---
 class: middle, center
 
-# 404
+![mozilla](public/img/Mozilla.png)
 
 ---
 class: middle, center
@@ -336,6 +322,12 @@ class: middle, center
 ???
 
 But we need to be careful about the patterns we pave.
+
+---
+---
+class: middle, center
+
+![horoscope2](public/img/horoscope2.png)
 
 ---
 class: middle, center
