update job and horoscopes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ background-image: url(public/img/space1.jpg)
 ---
 class: middle, center
 
+# http://bit.ly/cascadia_dubs
+
+---
+class: middle, center
+
 # hi my name is @ag_dubs
 
 ---
@@ -336,6 +341,12 @@ class: middle, center
 ???
 
 But we need to be careful about the patterns we pave.
+
+---
+---
+class: middle, center
+
+![horoscope2](public/img/horoscope2.png)
 
 ---
 class: middle, center
