--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ class: middle, center
 ---
 class: middle, center
 
+# Universal Open Web Literacy
+
+---
+class: middle, center
+
+# i like to .highlight[think about thinking]
+
+--
+
+# ...especially the type of thinking that happens .highlight[when people write code]
+
+---
+class: middle, center
+
 # i make mistakes
 
 ---
@@ -323,7 +337,6 @@ class: middle, center
 
 But we need to be careful about the patterns we pave.
 
----
 ---
 class: middle, center
 
